# rustql

./: .gitignore  Cargo.toml  README.md  rustql.db  rustql_data.json  test_sql.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust.yml
benches/: engine.rs
docs/: type-semantics.md  v1-breaking-roadmap.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: btree_load_recovery.rs  common.rs  parse_spanned_sql.rs  parse_sql.rs
src/: ast.rs  binder.rs  database.rs  engine.rs  error.rs  executor.rs  integration_tests.rs  legacy.rs  lexer.rs  lib.rs  main.rs  parser.rs  plan_executor.rs  planner.rs  storage.rs  testing.rs  wal.rs
src/binder/: aggregates.rs  scope.rs  types.rs
src/executor/: aggregate.rs  ddl.rs  dml.rs  expr.rs  join.rs  mod.rs  select.rs
src/executor/dml/: constraints.rs  delete.rs  generated.rs  insert.rs  merge.rs  update.rs
src/executor/expr/: cast.rs  compare.rs  mod.rs  (+6 more)
src/parser/: api.rs  core.rs  entry.rs  expressions.rs  mod.rs  select_clauses.rs  statements.rs  tests.rs  token_format.rs  tokens.rs
src/plan_executor/: aggregate.rs  filter.rs  joins.rs  order.rs  projection.rs  scans.rs  set_ops.rs  subquery.rs  support.rs
src/planner/: access.rs  cost.rs  expressions.rs  joins.rs  mod.rs  operators.rs  order.rs  output.rs  plan_node.rs  set_ops.rs  stats.rs
src/storage/: atomic_file.rs  btree.rs  json.rs  mod.rs
tests/: advanced_where.rs  aggregate_extended.rs  alter.rs  alter_drop_rename.rs  alter_extended.rs  backtick.rs  cast.rs  composite_indexes.rs  concat_operator.rs  create.rs  delete_using.rs  derived_tables.rs  division.rs  edge_cases.rs  engine.rs  engine_api.rs  executor.rs  exists.rs  foreign_key.rs  foreign_key_update.rs  group_by_expr.rs  having.rs  if_exists.rs  ilike.rs  index.rs  insert.rs  integration_tests.rs  join.rs  new_features.rs  new_features_extended.rs  phase3.rs  phase6.rs  phase7.rs  phase8.rs  planner.rs  predicate_pushdown.rs  property_core.rs  recovery.rs  recursive_cte.rs  returning.rs  (+15 more)
tests/common/: mod.rs
tests/sql_logic/: basic.slt  date_time_semantics.slt  errors.slt  exact_results.slt  explain_analyze.slt  semantics.slt  type_semantics.slt
(+16 files in other folders)
