[package]
name = "rustql"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"
description = "A small SQL database engine and REPL written in Rust."
readme = "README.md"
repository = "https://github.com/Cameron-Lyons/rustql"
keywords = ["database", "sql", "query-engine", "repl"]
categories = ["database-implementations", "command-line-utilities"]

[lib]
name = "rustql"
path = "src/lib.rs"

[[bin]]
name = "rustql"
path = "src/main.rs"

[dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = []
testing-api = []

[dev-dependencies]
# Integration tests opt into hidden internals without making them part of
# the default public API.
rustql = { path = ".", features = ["testing-api"] }

[[bench]]
name = "engine"
harness = false
